fix alignment

--- a/src/stylesheets/elements/form-controls/_dropzone.scss
+++ b/src/stylesheets/elements/form-controls/_dropzone.scss
@@ -105,6 +105,7 @@
   padding: units(0.5) units(1);
   pointer-events: none;
   position: relative;
+  text-align: left;
   z-index: 3;
 
   &:last-child {
